# benni-cmake-v6

./: Benni.docx  CMakeLists.txt  README.md  build_linux.sh  build_linux_Debug.sh  build_linux_Debug_shared.sh  build_linux_MinSizRel.sh  build_linux_MinSizRel_shared.sh  build_win.sh  build_win_Debug.sh  build_win_Debug_shared.sh  build_win_shared.sh  clean.sh  start_gitbash_with_mingw.bat
doc/: Benni.docx
media/test/: test.txt
media/themes/: darcula.css
src/FontView/: CMakeLists.txt
src/FontView/src/: FontGlyphInfoWidget.cpp  main.cpp
src/benni-font-awesome/: FontAwesome.hpp  ext-lib-fontawesome.pri
src/de.hampe.common/: CMakeLists.txt  de.hampe.common.pri
src/de.hampe.common/include/de/hampe/: PerfTimer.hpp  StringUtil.cpp  StringUtil.hpp  sprintf.hpp
src/de.hampe.common/include/de/hampe/color/: Color.hpp  RainbowColor.hpp
src/de.hampe.common/include/de/hampe/logging/: LogLevel.hpp  Logger.hpp  StdOutLogger.cpp
src/de.hampe.common/include/de/hampe/math/: sinCosTable.hpp
src/de.hampe.common/include/de/hampe/os/: FileFinderSTL.cpp  FileMagic.cpp  FileMagic.hpp  FileSystemSTL.cpp  FileSystemSTL.hpp  FileType.cpp  FileType.hpp
src/irrExt/: CMakeLists.txt
src/irrExt/src/irrExt/: AutoMeshBuffer.hpp  MeshLoader.cpp  MeshLoader.hpp  irrExt.hpp  irrExt.pri
src/lib-bzip2/: CMakeLists.txt
src/lib-freetype-2.10.0/: CMakeLists.txt
src/lib-freetype-2.10.0/ftExt/: FT_Utils.hpp  libFreeType.hpp
src/lib-glm/: CMakeLists.txt
src/lib-irrlicht-1.8.4/: CMakeLists.txt
src/lib-irrlicht-1.8.4/include/: IrrCompileConfig.h
src/lib-jpeg/: CMakeLists.txt
src/lib-png/: CMakeLists.txt
src/lib-tinyxml2/: ext-lib-tinyxml2.pri
src/lib-z/: CMakeLists.txt
src/lib/assimp-4.1.0/: CMakeLists.txt
src/lib/assimp-4.1.0/src/: IFCGeometry.cpp  IFCOpenings.cpp
src/lib/bzip2/: CMakeLists.txt
src/lib/bzip2/src/: bzlib_private.h
src/lib/clipper/: CMakeLists.txt
src/lib/cmake/: CopyFiles.cmake  PrintVars.cmake
src/lib/de.hampe.common/: CMakeLists.txt  de.hampe.common.pri
src/lib/de.hampe.common/include/de/hampe/: Types.hpp
src/lib/de.hampe.common/include/de/hampe/color/: ColorFormat.hpp  RainbowColor.cpp
src/lib/de.hampe.common/include/de/hampe/logging/: Logger.hpp  StdOutLogger.hpp
src/lib/de.hampe.common/include/de/hampe/os/: FileFinderSTL.hpp  SysInfo.cpp  SysInfo.hpp
src/lib/fltk-1.3.5/: CMakeLists.txt
src/lib/fltk-1.3.5/src/: Fl.cxx  flstring.h
src/lib/fontawesome/: CMakeLists.txt
src/lib/freetype-2.10.0/: CMakeLists.txt
src/lib/freetype-2.10.0/include/: libFreeType.hpp
src/lib/freetype-2.10.0/src/: CMakeLists.txt
src/lib/glm/: CMakeLists.txt
src/lib/irrExt/: CMakeLists.txt
src/lib/irrExt/src/irrExt/: AutoMeshBuffer.cpp  AutoMeshBuffer.hpp  AutoMeshBufferUtils.cpp  AutoMeshBufferUtils.hpp  AutoSceneNode.cpp  AutoSceneNode.hpp  BaseEventReceiver.cpp  BaseEventReceiver.hpp  BaseWindow.cpp  BaseWindow.hpp  Camera.cpp  Camera.hpp  CylinderCamera.cpp  CylinderCamera.hpp  FileSystem.cpp  FileSystem.hpp  FontUtils.cpp  FontUtils.hpp  GlmUtils.cpp  GlmUtils.hpp  ImageUtils.cpp  ImageUtils.hpp  MeshLoader.cpp  MeshLoader.hpp  NullDevice.cpp  NullDevice.hpp  OpenGLDevice.cpp  OpenGLDevice.hpp  PerfTimer.cpp  PerfTimer.hpp  StringUtils.cpp  StringUtils.hpp  Types.cpp  Types.hpp  createCircle.cpp  createCircle.hpp  createRoundRect.cpp  createRoundRect.hpp  irrExt.cpp  irrExt.hpp  (+3 more)
src/lib/irrXML/: CMakeLists.txt
src/lib/irrXML/src/: CXMLReaderImpl.h  fast_atof.h  irrXML.cpp
src/lib/irrlicht-1.8.4/: CMakeLists.txt
src/lib/irrlicht-1.8.4/src/Irrlicht/: CAttributeImpl.h  CZipReader.cpp
src/lib/jpeg/: CMakeLists.txt
src/lib/minizip/: CMakeLists.txt
src/lib/open3dgc/: CMakeLists.txt
src/lib/openddlparser/: CMakeLists.txt
src/lib/png/: CMakeLists.txt
src/lib/poly2tri/: CMakeLists.txt
src/lib/rapidjson/: CMakeLists.txt
src/lib/tinyxml2/: CMakeLists.txt
src/lib/tinyxml2/src/: tinyxml2.cpp
src/lib/unzip/: CMakeLists.txt
src/lib/utf8cpp/: CMakeLists.txt
src/lib/z/: CMakeLists.txt
src/lib/z/src/: assimp_contrib_zlib.7z
src/pioneers3d/: CMakeLists.txt
src/pioneers3d/src/pioneers3d/creator/: pioneers3d.pro
src/pioneers3d/src/pioneers3d/types/: Action.cpp  Chat.cpp  Chat.hpp  Common.hpp  CylinderCamera.cpp  CylinderCamera.hpp  Font.cpp
src/polyline-standalone/: CMakeLists.txt
src/polyline-standalone/doc/: README.Linux.md  start_git_shell.bat
src/polyline-standalone/src/: EventReceiver.cpp  EventReceiver.hpp  PointGenerator.cpp  PointGenerator.hpp  PolyLineTest.cpp  PolyLineTest.hpp  main_polyline.cpp
src/polyline-standalone/src/_unused/: FastPolyLine.hpp  GeoPosition.cpp  GeoPositionTest.hpp  IntersectionTool2DTest.cpp  IntersectionTool2DTest.hpp  LineGeometryProcessor.hpp  MathTest.cpp  MiterPolyLineTest.cpp  PolyLineCommon.cpp  RoundRect.cpp  RoundRect.hpp  TestAll.hpp  TestCommon.hpp  TexturedMiterPolyLineTest.cpp  addPolyLineABC.cpp  addPolyLineABC.hpp  createCircle.cpp  createRect.cpp  createRoundRect.cpp  de.hampe.pri
src/polyline-standalone/src/_unused/_backup_before_merge/: LineCap.hpp  PolyLine.hpp  PrimitiveRenderer.hpp
src/polyline-standalone/src/de/hampe/svg/: IntersectionTool2D.hpp  LineCapGenerator.cpp  LineCapGenerator.hpp  LineJoinGenerator.hpp  Math.cpp  MiterPolyLine.hpp  PolyLine.hpp  PrimitiveRenderer.cpp  PrimitiveRenderer.hpp  TexturedMiterPolyLine.cpp  TexturedMiterPolyLine.hpp  addTextBillboard.cpp  addTextBillboard.hpp
src/sysinfo/: SysInfo.cpp  SysInfo.hpp  main_SysInfoTest.cpp
src/test.glm/: CMakeLists.txt
src/test.irrlicht.fpscube/: main.cpp
src/test.irrlicht.matrix/: CMakeLists.txt  main.cpp
src/test.jpeg/: example.c
src/test.png/: CMakeLists.txt
src/test.qt/: CMakeLists.txt
src/test.qt/src/: MainWindow.hpp
